Added to fetch initial data
